# ChangeLog for app-admin/prelude-lml
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/prelude-lml/ChangeLog,v 1.34 2007/12/07 07:48:56 opfer Exp $

  07 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  prelude-lml-0.9.10.1.ebuild:
  stable x86, bug 191415

*prelude-lml-0.9.10.1 (05 Sep 2007)

  05 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -prelude-lml-0.9.8.1.ebuild, +prelude-lml-0.9.10.1.ebuild:
  Version bump wrt bug #186049

  22 Apr 2007; <pva@gentoo.org> prelude-lml-0.9.1.ebuild:
  Use do{conf,init}d, bug #174266.

  01 Feb 2007; Markus Ullmann <jokey@gentoo.org> -prelude-lml-0.8.6.ebuild,
  -prelude-lml-0.9.2.ebuild, -prelude-lml-0.9.5.ebuild:
  cleanup

  24 Jan 2007; Marius Mauch <genone@gentoo.org> prelude-lml-0.8.6.ebuild:
  Replacing einfo with elog

*prelude-lml-0.9.8.1 (07 Jan 2007)

  07 Jan 2007; Cedric Krier <cedk@gentoo.org> +prelude-lml-0.9.8.1.ebuild:
  Version bump and fix ruleset for bug #136091

*prelude-lml-0.9.5 (01 Jul 2006)

  01 Jul 2006; Marcelo Goes <vanquirius@gentoo.org>
  +prelude-lml-0.9.5.ebuild:
  0.9.5 version bump for bug 136089. Thanks to Eric Brown <eric.brown at
  dnbrown dot net>.

  30 Apr 2006; Simon Stelling <blubb@gentoo.org> prelude-lml-0.9.1.ebuild:
  stable on amd64

  08 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  prelude-lml-0.9.1.ebuild:
  ppc stable, bug #118708

  16 Feb 2006; Jason Wever <weeve@gentoo.org> prelude-lml-0.9.1.ebuild:
  Stable on SPARC.

  14 Feb 2006; Mark Loeser <halcy0n@gentoo.org> prelude-lml-0.9.1.ebuild:
  Stable on x86; bug #118708

*prelude-lml-0.9.2 (11 Feb 2006)

  11 Feb 2006; Marcelo Goes <vanquirius@gentoo.org>
  -prelude-lml-0.9.0.ebuild, +prelude-lml-0.9.2.ebuild:
  0.9.2 version bump.

  04 Feb 2006; Marcelo Goes <vanquirius@gentoo.org>
  prelude-lml-0.9.1.ebuild:
  Add ~amd64 keyword to 0.9.1 for bug 109937. Thanks to Craig <craig at xeriom