@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/prelude-lml
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/prelude-lml/ChangeLog,v 1.34 2007/12/07 07:48:56 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/prelude-lml/ChangeLog,v 1.35 2007/12/08 17:19:18 drac Exp $
+
+  08 Dec 2007; Samuli Suominen <drac@gentoo.org>
+  prelude-lml-0.9.10.1.ebuild:
+  amd64 stable wrt #191415
 
   07 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
   prelude-lml-0.9.10.1.ebuild:
